force-app/main/default/objects/Inventory_Snapshot__c/fields/Available_To_Order__c.field-meta.xml
<CustomField>
    <fullName>Available_To_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available To Order</label>
    <type>Checkbox</type>
</CustomField>