force-app/main/default/objects/Inventory_Snapshot__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>