force-app/main/default/objects/Inventory_Snapshot__c/fields/Items_In_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Items_In_Bundle__c</fullName>
    <label>Items In Bundle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>