force-app/main/default/objects/Inventory_Snapshot__c/fields/Quantity_Short__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Short__c</fullName>
    <label># Short</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>