force-app/main/default/objects/Inventory_Snapshot__c/fields/Value_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Value_In_Stock__c</fullName>
    <label>Value In Stock</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>