force-app/main/default/objects/Inventory_Snapshot__c/fields/Weight_in_Pounds__c.field-meta.xml
<CustomField>
    <fullName>Weight_in_Pounds__c</fullName>
    <label>Weight (lbs)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>